tests/NormalTests/paczka1/small_fuzzy/92247480.err
Error in line 3: 8LbY5MIu8Wl S551 87,88
Error in line 10: 7YROoTjIK S390 22,6
Error in line 13: 7YROoTjIK A480 79,0
